# lcvr-macro-bot

./: Cargo.toml  Dockerfile
migrations/2025-01-07-151037_create_macros/: down.sql  up.sql
src/: env.rs  main.rs  params.rs
src/commands/: add_macro.rs  delete_macro.rs  execute_macro.rs  list_macros.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
